--- a/SHOP/public/cart.html
+++ b/SHOP/public/cart.html
@@ -15,10 +15,7 @@
       <span class="logo-text">Vintage College Shop</span>
     </a>
     <nav class="main-nav" aria-label="Main navigation">
-      <div class="nav-links" role="list">
-        <a href="index.html" class="nav-link">Store</a>
-        <a href="cart.html" class="nav-link active" aria-current="page">Cart</a>
-      </div>
+      <div class="nav-links" role="list"></div>
       <div class="nav-actions">
         <div class="circle-btn search-btn" id="search-btn" tabindex="0" aria-label="Search catalog">
           <img src="assets/icons/search.png" class="search-icon" aria-hidden="true" alt="Search" />
