--- a/SHOP/public/index.html
+++ b/SHOP/public/index.html
@@ -10,15 +10,12 @@
 </head>
 <body>
   <header class="container header" role="banner">
-    <div class="logo">
+    <a class="logo" href="index.html">
       <img src="assets/icons/logo.png" alt="Vintage College Shop Logo" style="height:64px;width:auto;" />
       <span class="logo-text">Vintage College Shop</span>
     </a>
     <nav class="main-nav" aria-label="Main navigation">
-      <div class="nav-links" role="list">
-        <a href="index.html" class="nav-link active" aria-current="page">Store</a>
-        <a href="cart.html" class="nav-link">Cart</a>
-      </div>
+      <div class="nav-links" role="list"></div>
       <div class="nav-actions">
         <div class="circle-btn search-btn" id="search-btn" tabindex="0" aria-label="Search catalog">
           <img src="assets/icons/search.png" class="search-icon" aria-hidden="true" alt="Search" />
