Add working navigation and coupon modal interactions

--- a/public/cart.html
+++ b/public/cart.html
@@ -93,6 +93,8 @@
     </div>
   </aside>
 
+  <div id="modal-container"></div>
+
   <script src="assets/js/products.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/cart.js"></script>
