--- a/public/privacy.html
+++ b/public/privacy.html
@@ -93,6 +93,8 @@
     </div>
   </aside>
 
+  <div id="modal-container"></div>
+
   <script src="assets/js/products.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
