--- a/public/terms.html
+++ b/public/terms.html
@@ -86,6 +86,8 @@
     </div>
   </aside>
 
+  <div id="modal-container"></div>
+
   <script src="assets/js/products.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
