Restore storefront scripts and remove coupon shortcut

--- a/public/cart.html
+++ b/public/cart.html
@@ -37,7 +37,6 @@
           <img src="assets/icons/dark-theme.png" class="theme-icon-dark" aria-hidden="true" alt="Dark Theme" />
           <img src="assets/icons/light theme.png" class="theme-icon-light" aria-hidden="true" alt="Light Theme" />
         </button>
-        <button id="coupon-toggle" class="circle-btn coupon-btn" aria-label="Open coupon scratch card" aria-controls="coupon-modal">%</button>
       </div>
     </nav>
   </header>
@@ -92,6 +91,8 @@
       </footer>
     </div>
   </aside>
+
+  <div id="modal-container"></div>
 
   <script src="assets/js/products.js"></script>
   <script src="assets/js/main.js"></script>
