Adjust navigation links and move support to footer

--- a/public/product.html
+++ b/public/product.html
@@ -37,7 +37,6 @@
           <img src="assets/icons/dark-theme.png" class="theme-icon-dark" aria-hidden="true" alt="Dark Theme" />
           <img src="assets/icons/light theme.png" class="theme-icon-light" aria-hidden="true" alt="Light Theme" />
         </button>
-        <button id="coupon-toggle" class="circle-btn coupon-btn" aria-label="Open coupon scratch card" aria-controls="coupon-modal">%</button>
       </div>
     </nav>
   </header>
@@ -66,6 +65,7 @@
   <footer class="container footer" role="contentinfo">
     <nav class="footer-nav" aria-label="Footer navigation">
       <a href="index.html#our-story" class="footer-link">About</a>
+      <a href="index.html#support" class="footer-link">Support</a>
       <a href="privacy.html" class="footer-link">Privacy</a>
       <a href="terms.html" class="footer-link">Terms</a>
       <a href="mailto:support@vintagecollegeshop.com" class="footer-link">Contact</a>
@@ -88,6 +88,8 @@
       </footer>
     </div>
   </aside>
+
+  <div id="modal-container"></div>
 
   <script src="assets/js/products.js"></script>
   <script src="assets/js/main.js"></script>
