--- a/public/cart.html
+++ b/public/cart.html
@@ -102,5 +102,8 @@
   <script src="assets/js/products.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/cart.js"></script>
+  <script type="module" src="assets/js/firebase.js"></script>
+
+
 </body>
 </html>
