--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
@@ -170,5 +169,7 @@
   -->
   <script src="assets/js/products.js"></script>
   <script src="assets/js/main.js"></script>
+  <script type="module" src="assets/js/firebase.js"></script>
+
 </body>
 </html>
