--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <a class="logo" href="index.html">
       <!-- Header logo: uses logo.png per requirements -->
       <img src="assets/icons/logo.png" alt="Vintage College Shop Logo" class="logo-img" />
-      <span class="logo-text">Campus Shop</span>
+      <span class="logo-text">Vintage College</span>
     </a>
     
     <!-- Hamburger menu button for mobile -->
@@ -169,7 +169,7 @@
       <a href="terms.html" class="footer-link">Terms</a>
       <a href="mailto:support@vintagecollegeshop.com" class="footer-link">Contact</a>
     </nav>
-    <p>© <span id="year"></span> Campus Shop</p>
+    <p>© <span id="year"></span> Vintage College</p>
   </footer>
 
   <!-- 
