--- a/public/product.html
+++ b/public/product.html
@@ -14,7 +14,7 @@
     <a class="logo" href="index.html">
       <!-- Header logo: uses logo.png per requirements -->
       <img src="assets/icons/logo.png" alt="Vintage College Shop Logo" class="logo-img" />
-      <span class="logo-text">Campus Shop</span>
+      <span class="logo-text">Vintage College</span>
     </a>
     <button id="menu-toggle" class="menu-toggle" aria-label="Open navigation menu" aria-expanded="false" aria-controls="main-nav">
       <svg class="icon-menu" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z"></path></svg>
@@ -104,7 +104,7 @@
       <a href="terms.html" class="footer-link">Terms</a>
       <a href="mailto:support@vintagecollegeshop.com" class="footer-link">Contact</a>
     </nav>
-    <p>&copy; <span id="year"></span> Campus Shop</p>
+    <p>&copy; <span id="year"></span> Vintage College</p>
   </footer>
 
   <div id="toast-container" aria-live="polite" aria-atomic="true"></div>
