--- a/public/product.html
+++ b/public/product.html
@@ -44,6 +44,8 @@
   <main class="container" id="main-content">
     <section id="product-detail" class="product-detail" aria-label="Product details"></section>
 
+    <section id="recommendations" class="support-section support-section--compact" aria-label="You might also like"></section>
+
     <section id="reviews-section" class="support-section support-section--compact" aria-labelledby="reviews-heading">
       <div>
         <h2 id="reviews-heading">Reviews &amp; fit notes</h2>
